# fishgrid

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  bootstrap.sh  configure  configure.ac  fishgrid.cfg  specTracer_real_data.cc
autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: .directory  Doxyfile  fishgrid.doc  fishgrid.doc.in  fishgridcalibcomedi.doc  fishgridmain.doc.in  fishgridrecorder.doc  fishgridstepper.doc
include/: acquirethread.h  analyzer.h  basewidget.h  browsedatawidget.h  comedithread.h  commonnoiseremoval.h  configdata.h  cyclicbuffer.h  daqflexcore.h  daqflexthread.h  datathread.h  demean.h  fishgridwidget.h  idle.h  janalyzer.h  nidaqmxthread.h  portaudiomonitor.h  preprocessor.h  recorder.h  recording.h  rmspixel.h  rmsplot.h  simulationthread.h  spectra.h  stepper.h  tcpsocket.h  traces.h
m4/: fishgrid_nidaqmxbase.m4  relacs_libs.m4  relacs_portaudio.m4
src/: Makefile.am  Makefile.in  acquirethread.cc  analyzer.cc  basewidget.cc  browsedatawidget.cc  comedithread.cc  commonnoiseremoval.cc  configdata.cc  configdialog.cc  daqflexcore.cc  daqflexthread.cc  datathread.cc  demean.cc  fishgrid.cc  fishgridcalibcomedi.cc  fishgridrecorder  fishgridrecorder.cc  fishgridstepper.cc  fishgridwidget.cc  idle.cc  janalyzer.cc  jclient  jclient.cc  jserver  jserver.cc  multiplot.cc  nidaqmxthread.cc  optdialog.cc  optdialogbutton.cc  optwidget.cc  optwidgetbase.cc  plot.cc  portaudiomonitor.cc  preprocessor.cc  recorder.cc  recording.cc  rmspixel.cc  rmsplot.cc  simulationthread.cc  (+4 more)
